# Estudos

./: CMakeLists.txt  README.md
Algo e Prog/N2 - Atividade presença 28/: 1c.c  2c.c  3c.c  5c.c  Ordenacao de vetores 1.c  ordenacao de vetores.c
Algo e Prog/N2 - Avaliacao/: Bubble Sorte vetor 1.c
Algo e Prog/N2 - Revisao/: Bubble Sort Vetor.c  Matriz Numeros diagonais.c
Algo e Prog/N3 - Funcoes e Procedimentos/: Funcao Calcula Distancia.c  Funcao Calculadora.c  Funcao Maior e Menor.c  Funcoes.c  Procedimentos.c
Algo recursivos e funcionais/Atv 21-08/atv1/src/: Main.java
Algo recursivos e funcionais/Atv 23-09/: Atividade.docx  alunos.txt
Algo recursivos e funcionais/Atv 23-09/main/src/: Main.java  Student.java
Algo recursivos e funcionais/Atv 25-09/ATV 25-09/: localizar_palavras.txt
Algo recursivos e funcionais/Atv 25-09/ATV 25-09/src/: Atividade (1).docx  Main.java
Estrutura de dados 1/: README.md  app.go  fila.go  historico.go  models.go  pilha.go  structures_test.go
Herick - Algo e Prog/N2 - Atividade presença 28/: 4c.c  ordenacao de vetores.c
Herick - Algo e Prog/N2 - Revisao/: Bubble Sort Array.c
Herick - Algo e Prog/N3 - Lista método Selection/: N3 - Ordenacao Linha a linha individualmente .c  N3 - Selection Sort Array Crescente.c  N3 - Tempo para vetor de 9 posicoes.c
Paradigmas de programacao/: ATIVIDADE DE SÁBADO 15.03.c
Programacao orientada a Objeto/Atividade 12.06/: Atividade recepção.docx  bicicletas.csv  clientes.csv
Programacao orientada a Objeto/Atividade 12.06/src/: Bicicleta.java  Cliente.java  Main.java
Programacao orientada a Objeto/Atividade avaliativa 08.04/: Main.java  TelaLegal2.form  TelaLegal2.java  cliente.java
Programacao orientada a Objeto/Atividade avaliativa 13.03/: atividade.docx  bicicletas_ficticias - bicicletas_ficticias.csv  clientes_ficticios - clientes_ficticios.csv  pom.xml  vendas_ficticias - vendas_ficticias.csv
Programacao orientada a Objeto/Atividade avaliativa 13.03/src/main/java/org/poo/: Bicicleta.java  Cliente.java  CsvDataLoader.java  Main.java  Venda.java  VendaDetalhada.java  VendaJoinService.java
Programacao orientada a Objeto/Atividade avaliativa 13.03/src/test/java/org/poo/: CsvDataLoaderAndJoinServiceTest.java
Programacao orientada a Objeto/Atividade avaliativa 15.05/: Atividade08-5.docx  Livro.java  Livros - 08-05.csv  Main.java
Programacao orientada a Objeto/Atividade avaliativa 18.04/: Atividade 17-04.docx  bicicletas.csv  src.rar
Programacao orientada a Objeto/Atividade avaliativa 18.04/src/: Bicicleta.java  BicicletaApp.java  BicicletaService.java
Programacao orientada a Objeto/Atividade avaliativa 20.02/src/: Conta_Comum.java  Conta_Especial.java  Conta_Poupanca.java  Main.java  Movimento.java  Pessoa.java  Pessoa_Fisica.java  Pessoa_Juridica.java
Programacao orientada a Objeto/Atividade avaliativa 28.03/src/: TelaLegal2.form
Programacao orientada a Objeto/Atividade avaliativa 28.03/src/poo/atv2803/: Main.java  TelaLegal2.java  cliente.java
Programacao orientada a Objeto/N1/: Cavalo.java  CsvDataLoader.java  EstatisticasCavalos.java  EstatisticasCavalosService.java  Main.java  cavalos_regiao1.csv  cavalos_regiao2.csv  cavalos_regiao3.csv
Programacao orientada a Objeto/N2/: Categoria.csv  Clientes.csv  Prova N2.docx  produtos.csv
Programacao orientada a Objeto/N2/src/: Main.java
Programacao orientada a Objeto/N2/src/model/: Categoria.java  Cliente.java  Produto.java
Programacao orientada a Objeto/N2/src/repository/: CategoriaRepository.java  ClienteRepository.java  CsvUtils.java  ProdutoRepository.java
Programacao orientada a Objeto/N2/src/service/: CategoriaService.java  ClienteService.java  ProdutoService.java  ValidationException.java
Programacao orientada a Objeto/N2/src/ui/: CategoriaItem.java  CategoriaPanel.java  ClientePanel.java  MainFrame.java  ProdutoPanel.java
Programacao orientada a Objeto/N3/: Entrega_Semanas_1_2_Controle_Emprestimos.docx  Projeto pratico.docx
Programacao orientada a Objeto/N3/code/dados/: emprestimos.csv  objetos.csv
Programacao orientada a Objeto/N3/code/semana3/dados/: amigos.csv  emprestimos.csv  objetos.csv
Programacao orientada a Objeto/N3/code/src/: Main.java
Programacao orientada a Objeto/N3/code/src/model/: Amigo.java  Emprestimo.java  Objeto.java
Programacao orientada a Objeto/N3/code/src/repository/: AmigoRepository.java  CsvDataException.java  CsvUtils.java  EmprestimoRepository.java  ObjetoRepository.java
Programacao orientada a Objeto/N3/code/src/service/: LoanService.java  ValidationUtils.java
Programacao orientada a Objeto/N3/code/src/view/: AmigosPanel.java  EmprestimosPanel.java  MainFrame.java  ModernButton.java  ModernTableHeaderRenderer.java  ModernTableRenderer.java  ObjetosPanel.java  StyleGuide.java
Programacao orientada a Objeto/N3/code/test/: RegressionTests.java
Programacao orientada a Objeto/N3/docs/superpowers/plans/: 2026-06-21-emprestafacil-hardening.md
Programacao orientada a Objeto/N3/docs/superpowers/specs/: 2026-06-21-emprestafacil-hardening-design.md
Sec/: main.py
